fix(组件库): fix the vertical gap between component

--- a/src/pages/survey/Edit/ComponentLib.module.scss
+++ b/src/pages/survey/Edit/ComponentLib.module.scss
@@ -5,6 +5,7 @@
   border-radius: 3px;
   background-color: #f7f7f7;
   cursor: pointer;
+  margin-bottom: 12px;
   &:hover {
     border-color: #d9d9d9;
   }
